fix: icon, text, answer del

--- a/index.html
+++ b/index.html
@@ -18,31 +18,34 @@
         <div class="container">
 
             <div class="hero-header">
-                <div class="social-links wow animate__animated animate__fadeInDown" data-wow-delay="0.2s">
+                <div class="social-links hero-header-social wow animate__animated animate__fadeInDown" data-wow-delay="0.2s">
+                    <div class="hero-header-phone">
+                        <a class="contacts-link" href="tel:+375447167805">+375 44 716-78-05</a>
+                    </div>
 
-                    <a href="https://github.com/UlyanaZhidko?tab=repositories" class="social-link" target="_blank">
-                        <svg width="22" height="22" class="social-link-icon">
-                            <use xlink:href="img/icons.svg#github"></use>
-                        </svg>
-                    </a>
+                    <div class="hero-header-icons" style="display: flex;">
+                        <a href="https://github.com/UlyanaZhidko?tab=repositories" class="social-link" target="_blank">
+                            <svg width="22" height="22" class="social-link-icon">
+                                <use xlink:href="img/icons.svg#github"></use>
+                            </svg>
+                        </a>
 
-                    <a href="https://t.me/ulyana_like_sun" class="social-link" target="_blank">
-                        <svg width="22" height="22" class="social-link-icon">
-                            <use xlink:href="img/icons.svg#telegram"></use>
-                        </svg>
-                    </a>
+                        <a href="https://t.me/ulyana_like_sun" class="social-link" target="_blank">
+                            <svg width="22" height="22" class="social-link-icon">
+                                <use xlink:href="img/icons.svg#telegram"></use>
+                            </svg>
+                        </a>
 
-                    <a href="https://www.linkedin.com/in/uzhidko" class="social-link" target="_blank">
-                        <svg width="22" height="22" class="social-link-icon">
-                            <use xlink:href="img/icons.svg#linkedin"></use>
-                        </svg>
-                    </a>
+                        <a href="https://www.linkedin.com/in/uzhidko" class="social-link" target="_blank">
+                            <svg width="22" height="22" class="social-link-icon">
+                                <use xlink:href="img/icons.svg#linkedin"></use>
+                            </svg>
+                        </a>
+                    </div>
 
-                    <a href="mailto:zhidko.ulyana@gmail.com" class="social-link" target="_blank">
-                        <svg width="32" height="32" class="social-link-icon">
-                            <use xlink:href="img/icons.svg#gmail"></use>
-                        </svg>
-                    </a>
+                    <div class="hero-header-mail">
+                        <a class="contacts-link" href="mailto:zhidko.ulyana@gmail.com">zhidko.ulyana@gmail.com</a>
+                    </div>
                 </div>
             </div>
 
@@ -52,15 +55,10 @@
                 </div>
 
                 <div class="hero-text">
-                    <span class="hero-subtitle wow animate__animated animate__fadeInRight" data-wow-delay="0.2s">Веб-разработчик</span>
                     <h1 class="hero-title wow animate__animated animate__fadeInRight" data-wow-delay="0.4s">Ульяна Жидко</h1>
                     <p class="hero-discription wow animate__animated animate__fadeInRight" data-wow-delay="0.6s">
-                        Я junior frontend-разработчик, web-дизайнер. Занимаюсь разработкой сайтов и приложений. Студентка 5-ого курса БГУ, специальность «коммуникативный дизайн». 21 год. Я открыта для интересных проектов и новых возможностей, всегда стараюсь принести пользу.
-                        Буду рада сотрудничеству!
+                        Frontend-разработчик, web-дизайнер. <br>Я открыта для интересных проектов и новых возможностей, всегда стараюсь принести пользу. <br>Буду рада сотрудничеству!
                     </p>
-                    <a class="button hero-button wow animate__animated animate__fadeInRight" data-wow-delay="0.8s" href="#yak1">
-                        Связаться со мной
-                    </a>
                 </div>
 
             </div>
@@ -127,8 +125,14 @@
                                         target="_blank">сертификат</a></span>
                                 <span class="time-wrapper"><span class="time">20.08.2020</span></span>
                             </div>
-                            <div class="desc">Летний университет БГУ<br><strong>Курс Web-программирование</strong> <br> По итогам курса я: изучила технологии и протоколы, обеспечивающие работу глобальной сети, попробовала различные типы верстки сайтов, изучила отзывчивый
-                                веб-дизайн, использовала библиотеки для верстки. Создание приложений-клиентов. Асинхронность в JS.
+                            <div class="desc">Летний университет БГУ<br><strong>Курс Web-программирование</strong> <br>
+                                <ul style="text-align: left;list-style-type: disc;">
+                                    <li>технологии и протоколы сети</li>
+                                    <li>различные типы верстки</li>
+                                    <li>отзывчивый веб-дизайн</li>
+                                    <li>библиотеки для верстки</li>
+                                    <li>асинхронность в JS</li>
+                                </ul>
                             </div>
                         </div>
                     </li>
@@ -143,8 +147,11 @@
                                 <span class="time-wrapper"><span class="time">16.07.2020</span></span>
                             </div>
                             <div class="desc">
-                                <strong>Онлайн-курс "Learn to Code for the Web".</strong> <br> По итогам курса я: обобщила структуру и терминологию Интернета. Углубила знания HTML, CSS и JavaScript в создании веб-страниц и сайтов. Поэкспериментировала
-                                с кодом существующих веб-страниц, используя инструменты разработчика браузера.
+                                <strong>Онлайн-курс "Learn to Code for the Web".</strong> <br>
+                                <ul style="text-align: left;list-style-type: disc;">
+                                    <li>HTML, CSS и JavaScript</li>
+                                    <li>создании веб-страниц и приложений</li>
+                                </ul>
                             </div>
                         </div>
                     </li>
@@ -159,8 +166,12 @@
                                 <span class="time-wrapper"><span class="time">01.06.2020</span></span>
                             </div>
                             <div class="desc">Institute of IT&Business Administration IBA Group Microsoft 20480
-                                <strong>"Программирование в HTML5 с JavaScript и CSS3"</strong> <br> По итогам курса я: получила навыки разработки Windows Store и веб-приложений с использованием HTML5/CSS3/JavaScript, познакомилась с принципами создания
-                                программных компонентов и структур, используемых в приложениях на HTML5.
+                                <strong>"Программирование в HTML5 с JavaScript и CSS3"</strong> <br>
+                                <ul style="text-align: left;list-style-type: disc;">
+                                    <li>HTML, CSS и JavaScript</li>
+                                    <li>разработка Windows Store и веб-приложений</li>
+                                    <li>создание программных компонентов и структур</li>
+                                </ul>
                             </div>
                         </div>
                     </li>
@@ -169,19 +180,17 @@
             </div>
         </section>
 
-        <section class="section answer">
+        <section class="section work">
             <div class="container">
                 <h2 class="section-title wow animate__animated animate__fadeInLeft">Опыт работы</h2>
-                <div class="answer-for-q wow animate__animated animate__zoomIn" data-wow-delay="0.3s">
+                <div class="wow animate__animated animate__zoomIn" data-wow-delay="0.3s">
                     <blockquote>
                         <div class="blockquote_text">
                             <p>
                                 <b>Junior Frontend Developer</b>
                             </p>
                             <p>
-                                <a href="https://webmart.by/" target="_blank" style="color: #FFBB01;text-decoration: none;">
-                                    Webmart Group
-                                </a>
+                                <a href="https://webmart.by/" target="_blank">Webmart Group</a>
                             </p>
                             <span>Полный рабочий день</span>
                             <span>февр. 2021 г. – настоящее время(8 мес.)</span>
@@ -249,22 +258,6 @@
                         <p class="features-text">Выжимаю максимум из каждого нового проекта
                         </p>
                     </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="section answer">
-            <div class="container">
-                <h2 class="section-title wow animate__animated animate__fadeInLeft">Почему Web-разработка?</h2>
-                <div class="answer-for-q wow animate__animated animate__zoomIn" data-wow-delay="0.3s">
-                    <blockquote>
-                        <p class="blockquote_text"> В направлении Web-разработки мне нравится то, что здесь нет предела и ограничений в развитии. Просторы знаний и технологий настолько обширны, что при изучении чего-то нового всегда есть возможность расти не только в профессиональном
-                            плане но и в других направлениях, меняя сферу деятельности. У меня огромное желание учиться новому и применять все свои знания на практике. Я хочу работать Front-end разработчиком, потому что чувствую свой потенциал и хочу
-                            реализовать его, но кроме этого я желаю приносить пользу людям тем, что буду разрабатывать качественные и удобные для пользователей интерфейсы. Ведь сейчас почти все компании имеют свой сайт/приложение. И первое, что видит
-                            потенциальный клиент это интерфейс. И за считанные секунды компания может либо приобрести потребителя, либо потерять его. Направление Web-разработки никогда не останавливается, оно каждый день меняется и развивается, также
-                            и я стремлюсь к постоянному совершенствованию и развитию.
-                        </p>
-                    </blockquote>
                 </div>
             </div>
         </section>
@@ -713,7 +706,7 @@
                         <img class="card-img" src="img/photo/3.png" alt="image">
                         <div class="card-text">
                             <div class="card-heading">
-                                <h3 class="card-title">Рзработка упаковки и флакона духов</h3>
+                                <h3 class="card-title">Разработка упаковки и флакона духов</h3>
                             </div>
                             <!--Карточкa инфо-->
                             <div class="card-info">
@@ -766,7 +759,7 @@
                             <a class="contacts-link" href="tel:+375447167805">+375 44 716-78-05</a>
                         </div>
                         <!-- social-icins -->
-                        <div class="social-links wow animate__animated animate__zoomIn" data-wow-delay="1.2s">
+                        <div class="social-links footer-social-links wow animate__animated animate__zoomIn" data-wow-delay="1.2s">
 
                             <a href="https://github.com/UlyanaZhidko?tab=repositories" class="social-link" target="_blank">
                                 <svg width="22" height="22" class="social-link-icon">
@@ -783,12 +776,6 @@
                             <a href="https://www.linkedin.com/in/uzhidko" class="social-link" target="_blank">
                                 <svg width="22" height="22" class="social-link-icon">
                                     <use xlink:href="img/icons.svg#linkedin"></use>
-                                </svg>
-                            </a>
-
-                            <a href="mailto:zhidko.ulyana@gmail.com" class="social-link" target="_blank">
-                                <svg width="32" height="32" class="social-link-icon">
-                                    <use xlink:href="img/icons.svg#gmail"></use>
                                 </svg>
                             </a>
                         </div>
