--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                 <div class="hero-text">
                     <h1 class="hero-title wow animate__animated animate__fadeInRight" data-wow-delay="0.4s">Ульяна Жидко</h1>
                     <p class="hero-discription wow animate__animated animate__fadeInRight" data-wow-delay="0.6s">
-                        Frontend-разработчик, web-дизайнер. <br>Я открыта для интересных проектов и новых возможностей, всегда стараюсь принести пользу. <br>Буду рада сотрудничеству!
+                        <span style="color: #FFBB01;">Frontend-разработчик, web-дизайнер. </span><br> Беларусь г.Минск, готова взаимодействовать с заказчиками по всему миру.<br> Я открыта для интересных проектов и новых возможностей, всегда стараюсь принести
+                        пользу. <br>Буду рада сотрудничеству!
                     </p>
                 </div>
 
@@ -117,7 +118,7 @@
 
                 <ul class="timeline wow animate__animated animate__zoomIn" data-wow-delay="2.5s">
                     <!-- Item 1 -->
-                    <li>
+                    <li class="timeline-li">
                         <div class="direction-l">
                             <div class="flag-wrapper">
                                 <span class="hexa"></span>
@@ -138,7 +139,7 @@
                     </li>
 
                     <!-- Item 2 -->
-                    <li>
+                    <li class="timeline-li">
                         <div class="direction-r">
                             <div class="flag-wrapper">
                                 <span class="hexa"></span>
@@ -157,7 +158,7 @@
                     </li>
 
                     <!-- Item 3 -->
-                    <li>
+                    <li class="timeline-li">
                         <div class="direction-l">
                             <div class="flag-wrapper">
                                 <span class="hexa"></span>
@@ -187,7 +188,7 @@
                     <blockquote>
                         <div class="blockquote_text">
                             <p>
-                                <b>Junior Frontend Developer</b>
+                                <b>Frontend Developer</b>
                             </p>
                             <p>
                                 <a href="https://webmart.by/" target="_blank">Webmart Group</a>
