fix: main-text, skills_block

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                 <div class="hero-text">
                     <h1 class="hero-title wow animate__animated animate__fadeInRight" data-wow-delay="0.4s">Ульяна Жидко</h1>
                     <p class="hero-discription wow animate__animated animate__fadeInRight" data-wow-delay="0.6s">
-                        <span style="color: #FFBB01;">Frontend-разработчик, web-дизайнер. </span><br> Беларусь г.Минск, готова взаимодействовать с заказчиками по всему миру.<br> Я открыта для интересных проектов и новых возможностей, всегда стараюсь принести
-                        пользу. <br>Буду рада сотрудничеству!
+                        <span style="color: #FFBB01;">Frontend-разработчик, web-дизайнер. </span>
+                        <br> Беларусь Минск.<br> Открыта для интересных проектов и новых возможностей по всему миру, всегда стараюсь принести пользу. Буду рада сотрудничеству!
                     </p>
                 </div>
 
@@ -70,7 +70,7 @@
     <main>
         <section class="section skills">
             <div class="container">
-                <h2 class="section-title wow animate__animated animate__fadeInLeft">Мои навыки</h2>
+                <h2 class="section-title wow animate__animated animate__fadeInLeft">Использую в работе</h2>
                 <div class="flex-cont">
                     <div class="first-skills wow animate__animated animate__zoomIn" data-wow-delay="1.2s">
                         <div class="skills">
@@ -97,89 +97,120 @@
                             <p class="skill">JQuery</p>
                             <p class="skill">Bootstrap</p>
                             <p class="skill">WordPress</p>
+                        </div>
+                        <div class="prog">
                             <p class="skill">Github</p>
                             <p class="skill">Битрикс24</p>
                             <p class="skill">Slack</p>
-                        </div>
-                        <div class="design">
-                            <p class="skill">Figma</p>
-                            <p class="skill">Adobe Illustrator</p>
-                            <p class="skill">Adobe Photoshop</p>
-                            <p class="skill">Adobe After Effects</p>
-                            <p class="skill">Adobe InDesign</p>
-                            <p class="skill">3Ds Max</p>
-                            <p class="skill">Tilda/Wix</p>
                         </div>
 
                     </div>
 
                 </div>
 
-
-                <ul class="timeline wow animate__animated animate__zoomIn" data-wow-delay="2.5s">
-                    <!-- Item 1 -->
-                    <li class="timeline-li">
-                        <div class="direction-l">
-                            <div class="flag-wrapper">
-                                <span class="hexa"></span>
-                                <span class="flag"><a href="img/WebSert-Zhidko.jpg"
-                                        target="_blank">сертификат</a></span>
-                                <span class="time-wrapper"><span class="time">20.08.2020</span></span>
+                <h2 class="section-title wow animate__animated animate__fadeInLeft">Также знаю</h2>
+                <div class="flex-design-cont">
+                    <div class="first-skills wow animate__animated animate__zoomIn" data-wow-delay="1.2s">
+                        <div class="design-skils wow animate__animated animate__zoomIn" data-wow-delay="2s">
+                            <div class="design">
+                                <p class="skill">Adobe Illustrator</p>
+                                <p class="skill">Adobe Photoshop</p>
                             </div>
-                            <div class="desc">Летний университет БГУ<br><strong>Курс Web-программирование</strong> <br>
-                                <ul style="text-align: left;list-style-type: disc;">
-                                    <li>технологии и протоколы сети</li>
-                                    <li>различные типы верстки</li>
-                                    <li>отзывчивый веб-дизайн</li>
-                                    <li>библиотеки для верстки</li>
-                                    <li>асинхронность в JS</li>
-                                </ul>
+                            <div class="design">
+                                <p class="skill">Adobe After Effects</p>
+                                <p class="skill">Adobe InDesign</p>
                             </div>
-                        </div>
-                    </li>
-
-                    <!-- Item 2 -->
-                    <li class="timeline-li">
-                        <div class="direction-r">
-                            <div class="flag-wrapper">
-                                <span class="hexa"></span>
-                                <span class="flag"><a href="https://www.futurelearn.com/certificates/fv2hhxt"
-                                        target="_blank">сертификат</a></span>
-                                <span class="time-wrapper"><span class="time">16.07.2020</span></span>
+                            <div class="design">
+                                <p class="skill">Figma</p>
+                                <p class="skill">3Ds Max</p>
                             </div>
-                            <div class="desc">
-                                <strong>Онлайн-курс "Learn to Code for the Web".</strong> <br>
-                                <ul style="text-align: left;list-style-type: disc;">
-                                    <li>HTML, CSS и JavaScript</li>
-                                    <li>создании веб-страниц и приложений</li>
-                                </ul>
+                            <div class="design">
+                                <p class="skill">Tilda</p>
+                                <p class="skill">Wix</p>
                             </div>
                         </div>
-                    </li>
+                    </div>
 
-                    <!-- Item 3 -->
-                    <li class="timeline-li">
-                        <div class="direction-l">
-                            <div class="flag-wrapper">
-                                <span class="hexa"></span>
-                                <span class="flag"><a href="img/Microsoft 20480 - Zhidko.jpg"
+
+                    <ul class="timeline wow animate__animated animate__zoomIn" data-wow-delay="2.5s">
+                        <!-- Item 1 -->
+                        <li class="timeline-li">
+                            <div class="direction-l">
+                                <div class="flag-wrapper">
+                                    <span class="hexa"></span>
+                                    <span class="flag">обучение</span>
+                                    <span class="time-wrapper"><span class="time">2017-2022</span></span>
+                                </div>
+                                <div class="desc">
+                                    БГУ, Коммуникативный дизайн
+                                </div>
+                            </div>
+                        </li>
+
+                        <!-- Item 2 -->
+                        <li class="timeline-li">
+                            <div class="direction-r">
+                                <div class="flag-wrapper">
+                                    <span class="hexa"></span>
+                                    <span class="flag"><a href="img/Microsoft 20480 - Zhidko.jpg"
                                         target="_blank">сертификат</a></span>
-                                <span class="time-wrapper"><span class="time">01.06.2020</span></span>
+                                    <span class="time-wrapper"><span class="time">01.06.2020</span></span>
+                                </div>
+                                <div class="desc">Institute of IT&Business Administration IBA Group Microsoft 20480
+                                    <strong>"Программирование в HTML5 с JavaScript и CSS3"</strong> <br>
+                                    <ul style="text-align: left;list-style-type: disc;">
+                                        <li>HTML, CSS и JavaScript</li>
+                                        <li>разработка Windows Store и веб-приложений</li>
+                                        <li>создание программных компонентов и структур</li>
+                                    </ul>
+                                </div>
                             </div>
-                            <div class="desc">Institute of IT&Business Administration IBA Group Microsoft 20480
-                                <strong>"Программирование в HTML5 с JavaScript и CSS3"</strong> <br>
-                                <ul style="text-align: left;list-style-type: disc;">
-                                    <li>HTML, CSS и JavaScript</li>
-                                    <li>разработка Windows Store и веб-приложений</li>
-                                    <li>создание программных компонентов и структур</li>
-                                </ul>
+                        </li>
+
+                        <!-- Item 3 -->
+                        <li class="timeline-li">
+                            <div class="direction-l">
+                                <div class="flag-wrapper">
+                                    <span class="hexa"></span>
+                                    <span class="flag"><a href="https://www.futurelearn.com/certificates/fv2hhxt"
+                                        target="_blank">сертификат</a></span>
+                                    <span class="time-wrapper"><span class="time">16.07.2020</span></span>
+                                </div>
+                                <div class="desc">
+                                    Онлайн-курс<br> <strong>"Learn to Code for the Web"</strong>
+                                    <ul style="text-align: left;list-style-type: disc;">
+                                        <li>HTML, CSS и JavaScript</li>
+                                        <li>создании веб-страниц и приложений</li>
+                                    </ul>
+                                </div>
                             </div>
-                        </div>
-                    </li>
-                </ul>
-            </div>
+                        </li>
+
+                        <!-- Item 4 -->
+                        <li class="timeline-li">
+                            <div class="direction-r">
+                                <div class="flag-wrapper">
+                                    <span class="hexa"></span>
+                                    <span class="flag"><a href="img/WebSert-Zhidko.jpg"
+                                        target="_blank">сертификат</a></span>
+                                    <span class="time-wrapper"><span class="time">20.08.2020</span></span>
+                                </div>
+                                <div class="desc">Летний университет БГУ<br><strong>Курс Web-программирование</strong> <br>
+                                    <ul style="text-align: left;list-style-type: disc;">
+                                        <li>технологии и протоколы сети</li>
+                                        <li>различные типы верстки</li>
+                                        <li>отзывчивый веб-дизайн</li>
+                                        <li>библиотеки для верстки</li>
+                                        <li>асинхронность в JS</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </section>
+
 
         <section class="section work">
             <div class="container">
@@ -194,7 +225,7 @@
                                 <a href="https://webmart.by/" target="_blank">Webmart Group</a>
                             </p>
                             <span>Полный рабочий день</span>
-                            <span>февр. 2021 г. – настоящее время(8 мес.)</span>
+                            <span>февр. 2021 г. – настоящее время(9 мес.)</span>
 
                             <ul>
                                 <li>Разработка веб-сайтов с нуля;</li>
