del features, add work-process

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                                 <a href="https://webmart.by/" target="_blank">Webmart Group</a>
                             </p>
                             <span>Полный рабочий день</span>
-                            <span>февр. 2021 г. – настоящее время(9 мес.)</span>
+                            <span>февр. 2021 г. – настоящее время(10 мес.)</span>
 
                             <ul>
                                 <li>Разработка веб-сайтов с нуля;</li>
@@ -244,51 +244,58 @@
             </div>
         </section>
 
-        <section class="section features">
+        <section class="section work-process">
             <div class="container">
-                <h2 class="section-title wow animate__animated animate__fadeInLeft">Обо мне</h2>
-                <div class="features-block wow animate__animated animate__zoomIn" data-wow-delay="0.3s">
-                    <div class="features-item">
-                        <svg width="50" height="50" class="features-image">
-                            <use xlink:href="img/icons.svg#offer-img"></use>
-                        </svg>
-                        <p class="features-text">Довожу любую задачу до логического конца
-                        </p>
+                <h2 class="section-title wow animate__animated animate__fadeInLeft">Процесс работы</h2>
+                <div class="work-process-block wow animate__animated animate__zoomIn" data-wow-delay="0.3s">
+                    <div class="work-process-item">
+                        <h3 class="work-process-item-title work-process-item-title-first">Получение задачи</h3>
                     </div>
-                    <div class="features-item">
-                        <svg width="50" height="50" class="features-image">
-                            <use xlink:href="img/icons.svg#deadline-img"></use>
-                        </svg>
-                        <p class="features-text">Планирую свою время, не распыляюсь на задачи, вовремя закрываю проекты
-                        </p>
+                    <div class="work-process-item">
+                        <h3 class="work-process-item-title">Анализ задачи</h3>
+                        <ul class="work-process-item-ul">
+                            <li>оценка объема и сложности;</li>
+                            <li>уточнение всех требований;</li>
+                            <li>изучение тенденций по теме задачи;</li>
+                            <li>анализ продуктов конкурентов;</li>
+                            <li>выявление недочетов.</li>
+                        </ul>
                     </div>
-                    <div class="features-item">
-                        <svg width="50" height="50" class="features-image">
-                            <use xlink:href="img/icons.svg#steps-img"></use>
-                        </svg>
-                        <p class="features-text">Люблю изучать новые и развивать имеющиеся навыки
-                        </p>
+                    <div class="work-process-item">
+                        <h3 class="work-process-item-title">Планирование</h3>
+                        <ul class="work-process-item-ul">
+                            <li>продумывание стека технологий;</li>
+                            <li>составление плана работы;</li>
+                            <li>постановка дедлайнов;</li>
+                            <li>выбор приоритетного принципа разработки.</li>
+                        </ul>
                     </div>
-                    <div class="features-item">
-                        <svg width="50" height="50" class="features-image">
-                            <use xlink:href="img/icons.svg#storage-img"></use>
-                        </svg>
-                        <p class="features-text">Анализирую поставленные задачи, нахожу креативные решения, продумываю шаги реализации
-                        </p>
+                    <div class="work-process-item work-process-item-double">
+                        <div class="item-double">
+                            <h3 class="work-process-item-title">Процесс работы frontend</h3>
+                            <ul class="work-process-item-ul">
+                                <li>подбор оптимальных решений;</li>
+                                <li>создание семантичной и кроссбраузерной верстки;</li>
+                                <li>адаптивноть каждого блока.</li>
+                            </ul>
+                        </div>
+                        <div class="item-double">
+                            <h3 class="work-process-item-title">Процесс работы дизайн</h3>
+                            <ul class="work-process-item-ul">
+                                <li>проектирование пользовательских интерфейсов;</li>
+                                <li>разработка дополнительных визуальных компонентов.</li>
+                            </ul>
+                        </div>
+
                     </div>
-                    <div class="features-item">
-                        <svg width="50" height="50" class="features-image">
-                            <use xlink:href="img/icons.svg#conversation-img"></use>
-                        </svg>
-                        <p class="features-text">Открыто делюсь своими знаниями, готова помогать в любой ситуации
-                        </p>
-                    </div>
-                    <div class="features-item">
-                        <svg width="50" height="50" class="features-image">
-                            <use xlink:href="img/icons.svg#testing-img"></use>
-                        </svg>
-                        <p class="features-text">Выжимаю максимум из каждого нового проекта
-                        </p>
+                    <div class="work-process-item">
+                        <h3 class="work-process-item-title">Планирование</h3>
+                        <ul class="work-process-item-ul">
+                            <li>продумывание стека технологий;</li>
+                            <li>составление плана работы;</li>
+                            <li>постановка дедлайнов;</li>
+                            <li>выбор приоритетного принципа разработки.</li>
+                        </ul>
                     </div>
                 </div>
             </div>
