--- a/index.html
+++ b/index.html
@@ -211,7 +211,6 @@
             </div>
         </section>
 
-
         <section class="section work">
             <div class="container">
                 <h2 class="section-title wow animate__animated animate__fadeInLeft">Опыт работы</h2>
@@ -289,12 +288,11 @@
 
                     </div>
                     <div class="work-process-item">
-                        <h3 class="work-process-item-title">Планирование</h3>
+                        <h3 class="work-process-item-title">Сдача работы на ревью</h3>
                         <ul class="work-process-item-ul">
-                            <li>продумывание стека технологий;</li>
-                            <li>составление плана работы;</li>
-                            <li>постановка дедлайнов;</li>
-                            <li>выбор приоритетного принципа разработки.</li>
+                            <li>согласование проделанной работы;</li>
+                            <li>доработки и внесение правок;</li>
+                            <li>конечная сдача готового проекта.</li>
                         </ul>
                     </div>
                 </div>
